fixed alignment issues for skill columns

--- a/assets/stylesheets/skills.css
+++ b/assets/stylesheets/skills.css
@@ -46,8 +46,9 @@ img {
 	display: flex;
 	flex-flow: row wrap;
 	justify-content: space-around;
-	width: 100%;
 	max-width: 1100px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 h2, h3, li {
